update pipeline