@@ -17,6 +17,7 @@ pipeline {
         NEXUS_LOGIN = 'nexuslogin'
         SONARSERVER = 'sonarserver'
         SONARSCANNER = 'sonarscanner'
+        SONAR_SCANNER_OPTS = "--add-opens java.base/java.lang=ALL-UNNAMED"
     }
 
     stages {
